Feat: Switch to ExampleJsonGenerator to replace Swagger Inflector
* Feat: Start own implementation of an example generator to replace inflector

Co-authored-by: Timon Back <timon.back+git@gmail.com>

* feat: Handle example value and enum

* feat: Simplify DefaultSchemasService

* feat: Handle schema#exampleValue for all types

* chore: Remove swagger inflector

* chore: Smaller cleanups

* chore: Apply formatting for java

* chore: Add ExampleGenerator interface

* test: Add ExampleJsonGenerator to test context

* feat: Add SwaggerInflectorJsonGenerator

* feat: Activate via configuration

* feat: Activate via configuration

* chore: Replace commonsIo with commonsLang3

* chore: Code review adjustments

Co-authored-by: Timon Back <timon.back+git@gmail.com>

---------

Co-authored-by: Timon Back <timon.back+git@gmail.com>
Co-authored-by: Timon Back <timon.back@otto.de>